syntax = "proto3";

package Shop.Application.DTOs.Product;

message ProductListShow {
    int32 id = 1;
    int32 product_id = 2;
    int32 product_stock_price_id = 3;
    string name = 4;
    string latin_name = 5;
    string image = 6;
    string categury_name = 7;
    string categury_latin_name = 8;
    int32 quantity = 9;
    int64 sale_price = 10;
    int64 discount_price = 11;
    google.protobuf.Timestamp discount_date = 12;
    string short_description = 13;
    string short_link = 14;
    string variation_name = 15;
    int32 section_id = 16;
    string section_name = 17;
    bool show_in_discount_panels = 18;
}
